# tanin

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: ci.yml
scripts/: cli.py  manage.py
src/tanin/: init_db.py  main.py
src/tanin/api/endpoints/: auth_router.py  session_router.py  user_router.py  webrtc_router.py
src/tanin/core/: config.py  database.py  dependencies.py  exceptions.py  handlers.py  security.py
src/tanin/middlewares/: token_bucket.py
src/tanin/models/: chat_model.py  user_model.py
src/tanin/repository/: user_repo.py
src/tanin/schemas/: chat_schema.py  response_schema.py  token_schema.py  user_schema.py
src/tanin/services/: auth_service.py  chat_service.py  user_service.py
src/tanin/utils/: helper.py  logger.py
src/tanin/websocket/: connection_manager.py  endpoints.py  matching_service.py  redis_server.py
tests/: test_user_api.py
